templates/tpl_modified_responsive/stylesheet.css
/* ... */
/* END fonts */


/* 2. START globals */
* {
  margin:0;
  padding:0;
}
body {
  font-family: 'Poppins', sans-serif;
  font-weight: 300;
  font-size:13px;
  background-color:#fff;
  color:#555;
  line-height:21px;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust:     100%;
}
.clearfix, .clear, .clearer {
  line-height:0px;
  height:0px;
  clear:both;   
}

.cf:before, .cf:after { content: ""; display: table; }
.cf:after { clear: both; }
.cf { zoom: 1; }
         
.mini { font-size:11px;font-weight:normal;}
.midi { font-size:12px;font-weight:normal;}

.lineheight16 { line-height:16px;}
.lineheight18 { line-height:18px;}

a.black {
  color:#333 !important;
}
a.black:hover {
  color:#b0377e !important;
  text-decoration:none !important;
}

.twoColums {
  float:left;
  width:48%;
  margin: 0 4% 20px 0;
}
.twoColums.last {
  margin: 0 0 20px 0;
}
.twoColums.stickyright {
  float:right;
}      

.twoColumsInner {
  float:left;
  width:48%;
  margin: 0 4% 20px 0;
}
.twoColumsInner.last {
  margin: 0 0 20px 0;
}

.twoColums_small {
  float:left;
  width:47%;
  margin: 0 6% 0px 0;
}
.twoColums_small.last {
  margin: 0 0 0 0;
}


.button_left,
.button_left_cart {
  float:left;
  display:inline-block;
  max-width: 48%;
  margin: 10px 0px 0px 0px;
  min-height:32px;
  line-height:32px;
}
.button_right,
.button_right_cart {
  float:right;
  display:inline-block;
  max-width: 48%;
  margin: 10px 0px 0px 0px;
  text-align: right;
  min-height:32px;
  line-height:32px;
}
.button_left_error {
  float:left;
  display:inline-block;
  max-width: 48%;
  margin: 22px 0px 0px 0px;
  min-height:32px;
  line-height:32px;
}
.button_right_checkout {
  float:right;
  text-align:right;
  display:inline-block;
  margin: 5px 0px 0px 0px;
  min-width:200px;
}
.button_right_checkout_small {
  float:right;
  margin: 4px 0px 0px 20px;
}

.button_left img,
.button_left input,
.button_left_error input,
.button_right img,
.button_right input,
.button_left_cart img,
.button_left_cart input,
.button_right_cart img,
.button_right_cart input,
.button_right_checkout input
 {
  vertical-align:bottom;
}
.button_left_cart img {
  margin: 0px 5px 0px 0px;
}
.paypal_button {
  margin:0px 2px 0px 0px;
  display:inline-block;
}
.paypal_button img {
  height:32px;
}
.paypal_button2 {
  margin:5px 0px 0px 0px;
  display:block;
}
.paypal_button2 img {
  height:32px;
}
.express_button {
  margin:0px 0px 0px 0px;
  display:inline-block;
}
.paypal_button img {
  height:32px;
}
.text_left {
  float:left;
  width: 48%;
  margin: 10px 0px 0px 0px;
  min-height:28px;
  font-size:10px;
  line-height:14px;
}

p {
  margin:8px 0 8px 0;
}
p.onlytop {
  margin:8px 0 0 0;
}
p.nomargin {
  margin:0 0 0 0;
}
p.textright {
  text-align:right;
}

table {
  width:100%;
  border-spacing: 0;
  border-collapse:collapse;
}
table td {
  padding:4px 0px;
}
.td_full {
  width:100%;
}
/* END globals */


/* 3. START header */
#layout_wrap {
  width:100%;
  padding: 0px 0px;
  margin: 0px 0px;
}

#layout_navbar {
  background-color:#f5f5f5;
  padding:3px 0px; 
}
.layout_navbar_inner {
  width:100%;
  max-width:1140px;
  padding: 1px 10px 0px 10px;
  margin: 0px auto;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

ul.topnavigation {
  list-style-type:none;
  width:100%;
}
ul.topnavigation li {
  float:right;
  padding: 0px 0px 0px 30px;
  line-height:16px;
  margin: 10px 0px;
  color:#707070;
  font-size:12px;
}
ul.topnavigation li.tn_group {
  float:left;
  padding: 0px;
}
ul.topnavigation li.tn_lang img {
  margin: 0px 0px 0px 5px;
  vertical-align:-1px;
}
ul.topnavigation li a {
  color:#707070;
  font-weight:400;
  text-decoration:none;
}
ul.topnavigation li a:hover {
  color:#b0377e;
  text-decoration:none;
}
ul.topnavigation li .fas,
ul.topnavigation li .far {
  vertical-align:0px;
  padding-right:6px;
}


#layout_logo {
  background-color:#ffffff;
  padding:20px 10px;
  width:100%;
  max-width:1140px;
  margin: 0px auto;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
#logo {
  float:left;
  width:265px;
  height:75px;
}
#logo img {
  vertical-align:bottom;
  width:100%;
  height:auto;
}
#logo a {
  display:block;
  outline:none;
  text-decoration:none;
}
#logo a:hover {
  outline:none;
  text-decoration:none;
}


#search {
  float:right;
  position:relative;
  width:400px;
  border:0px solid transparent;
  margin-top:22px;
}
.search_inner {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}
.search_inner .search_cat {
  position:relative;
  z-index: 1200;
  width:80px;
}
.search_inner .search_cat .SumoSelect > .CaptionCont {
  background-color: #eeeeee !important;
  -webkit-border-top-right-radius: 0px !important;
  -webkit-border-bottom-right-radius: 0px !important;
  -moz-border-radius-topright: 0px !important;
  -moz-border-radius-bottomright: 0px !important;
  border-top-right-radius: 0px !important;
  border-bottom-right-radius: 0px !important;
  height:35px;
  border-right:1px solid #eeeeee !important;
}
.search_inner .search_cat .SumoSelect:focus > .CaptionCont { border-right:1px solid #eeeeee !important; }
.search_inner .search_cat .SumoSelect:focus > .CaptionCont { border-right:1px solid #659eC9 !important; }

.search_inner .SumoSelect > .CaptionCont > span {
  padding-right: 20px;
}    
.search_inner .search_cat .SumoSelect > .optWrapper {
  width:auto !important;
  max-width:300px !important;
}
.search_inner .search_cat .SumoSelect > .optWrapper > .options li.opt {
  padding: 5px 6px;
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
}
.search_inner .search_input {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}
/* ... */

